bug: clipping of question text

--- a/quiz.css
+++ b/quiz.css
@@ -38,12 +38,13 @@ h2 {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 5rem 0;
 
     /* Create inner box and curve the edges*/
-    /*width: 80vw;*/
-    /*height: 75vh;*/
-    width:80%;
-    height: 75%;
+    width: 80vw;
+    height: 75vh;
+    /*width:80%;*/
+    /*height: 75%;*/
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     background-color: var(--secondary-bg-clr);
@@ -90,11 +91,12 @@ h2 {
     background-color: var(--accent-clr);
 }
 .question-container{
+    border: 2px solid red;
     display: flex;
     text-align: center;
     /*justify-content: center;*/
     align-items: center;
-
+    flex-direction: column;
 }
 
 .score{}
